[gd_scene load_steps=13 format=3 uid="uid://6iv55yytqopt"]

[ext_resource type="Texture2D" uid="uid://bwyvi4ylvq6su" path="res://asset/BossStill.png" id="1_77kuu"]
[ext_resource type="Script" uid="uid://gemvw55qbw2m" path="res://Enemy/Boss/boss.gd" id="1_mu5rq"]
[ext_resource type="PackedScene" uid="uid://b75hj4fj1s702" path="res://Enemy/Shooter/boss_bullet.tscn" id="2_23pev"]
[ext_resource type="Texture2D" uid="uid://dd3le65ql7d2u" path="res://asset/BossFightl.png" id="3_b1y8f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mu5rq"]
size = Vector2(438, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_23pev"]
size = Vector2(562.5, 247)

[sub_resource type="CircleShape2D" id="CircleShape2D_b1y8f"]
radius = 269.02972

[sub_resource type="Animation" id="Animation_wuevu"]
resource_name = "shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_b1y8f")]
}

[sub_resource type="Animation" id="Animation_hkx47"]
length = 0.001

[sub_resource type="Animation" id="Animation_hsmtr"]
resource_name = "pre_dash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_77kuu")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.07, 0.13333333, 0.19, 0.2148196, 0.2397734, 0.3, 0.33090898, 0.35586277, 0.37647676, 0.39383593, 0.43333334, 0.56666666, 0.73333335, 0.8333333, 0.93333334, 0.99),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-0.9477137838329212, -0.02617994, 0.05235987755982989, -0.29321531433504755, -0.29321531433504755, -0.2617993877991494, 0.12217304763960307, -0.017453292519943295, 0.16755160819145604, 0.39793506945470736, 0.2617993877991494, -1.4730578886832137, 0.026179938779914945, -0.02617994, 3.0543261909900767, 0.0]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 3.67, -0.0041589653, -0.6116667, 0, 0, -9.465, -0.002169895, 2.1891668, 0, 0, 3, -0.0012657717, -2.0775, 0, 0, 7, -0.0014465967, -0.6666667, 0, 0, -21, -0.0039781407, 4.666667, 0, 0, -7, 0, 7, 0, 0, -2, 0, 10, 0, -0.80929416, 5, 0, 0, 0, 0, -6, -0.00759463, -16, 0, 0, -19, -0.0037973165, 2.1666667, 0, 0, -8, 0, 3, 0, 0, -5, 0, 9, 0, -6.11376, -9, -0.0034356664, -0.5277778, 0.0030740178, 0.4722223, -29, 0, 3, 0, -1.3535446, 1, -0.029293582, -17, 0, 0, 7, -0.00018082559, -1, 0, 0, -16, 0, -3.9632416, 0, 20, -5, -0.0003616487, -0.13725473, 0.002712369, 1.0294119, -9, 0, -7.025747, 0, 10, -13, -0.0021698922, 0.6666667, 0, 0, -7, -0.0039781434, -1.0731713, 0.0034356664, 0.9268289, 4, 0, 1, 0, -1.5547838, -1, -0.001514959, 6.9817405, 0.0032548308, -15, -27, -0.003616492, -5.312498, 0.0021698973, 3.1875021, -30, -0.0016274204, -9.624986, 0.0005424768, 3.208348, 50, -0.005786389, -8.5, 0, 0, -14, 0, 10.823073, 0, -17, -10, 0, -32, 0, 0, -11, -0.0034356664, 0.16666667, 0, 0, -43, -0.001808246, 5.3333335, 0, 0, -8, -0.0012657692, -0.860654, 0.009764528, 6.639346, 2, 0, 12.633728, 0, -16, -10, 0, 10, 0, 0, -7, -0.0021698922, -0.5, 0, 0, -11, 0, 1, 0, -3, 12, -0.014104317, -3.1666667, 0, 0, -13, -0.0012657742, 4.166667, 0, 0, -2, -0.0059998957, 1.1060251, 0.037973166, -7, -11, -0.011292543, 0.83267015, 0.02712369, -2, 32, 0, -41, 0, 0, -6, -0.007174127, -9.092087, 0.017359138, 22, 5, -0.009521375, -7.313265, 0.0065096617, 5, -30, -0.004112457, -6.31745, 0.022783875, 35, -2, -0.013923487, -4.666667, 0, 0, -35, 0, 0, 0, 0, 2, -0.0075946352, -0.6666667, 0, 0, 0, -0.00072330236, 4, 0, 0),
"times": PackedFloat32Array(0, 0.024953792, 0.03797316, 0.045567792, 0.05424737, 0.078116216, 0.09439043, 0.1, 0.10415496, 0.12368401, 0.14646791, 0.16274212, 0.1735916, 0.1942056, 0.20505507, 0.2126497, 0.21373466, 0.2376035, 0.2397734, 0.2560476, 0.26906696, 0.29293582, 0.3, 0.31354982, 0.33524877, 0.3450133, 0.34826815, 0.36020255, 0.37973163, 0.40034562, 0.4111951, 0.4187897, 0.47737688, 0.49690595, 0.5099253, 0.57176733, 0.5945512, 0.60214585, 0.6368642, 0.7041309, 0.73016965, 0.7974364, 0.79852134, 0.82781494, 0.91135585, 0.95258385, 0.95692366, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:offset:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -3.82, -0.0041589653, 0.63666666, 0, 0, -14.88, -0.002169895, 1.8433334, 0, 0, 6, -0.0012657717, -3.48, 0, 0, -4, -0.0014465967, 1.6666667, 0, 0, -4, 0, -12, 0, 0, -5, 0, -2, 0, 0, 1, 0, -14, 0, 0, -16, 0, 9, 0, 0, 28, -0.0023507203, -2.166667, 0.002712369, 2.4999998, -45, -0.01015001, -2.8349397, 0.07160653, 20, -31, -0.0014416734, -1.105073, 0.05740221, 44, 12, -0.0057282303, 3.9597998, 0.017359152, -12, -39, -0.0065096766, 7, 0.0012332401, -1.3261306, -9, -0.012115246, 3.5000002, 0, 0, -31, -0.006322556, -4.662018, 0.05424738, 40, 3, -0.0007232974, -0.7826071, 0.0034356713, 3.717393, -4, 0, -5.9113855, 0, 22, -37, -0.001808241, -0.2307687, 0.0099453535, 1.2692313, -6, -0.00072330236, -0.5090937, 0.009222051, 6.4909067, -25, -0.0032548408, -0.6470587, 0.00596721, 1.1862748, -7, -0.0014465948, -0.45701677, 0.004356454, 1.3763167, -37, -0.0037973176, 1.0169289, 0.0005591363, -0.14973776, -14, -0.0058030486, -4.8624473, 0.00016416113, 0.13755266, 5, -0.0117535945, -1.5, 0, 0, -13, -0.001968442, 1.0482738, 0.04882264, -26, 11, -0.00037831068, -0.20921417, 0.0068546734, 3.7907858, -1, -0.0045039505, 3.4921222, 0.0010849487, -0.84121114, -15, -0.0055888994, 0, 0.0012657742, 0, 11, -0.007232984, 0.6862746, 0.0050630867, -0.48039204, -33, -0.002712369, 2.7678583, 0.0023507178, -2.3988085, -39, 0, 18, 0, -0.9428083, -20, -0.014485656, -4.1081514, 0.014104307, 4, -1, -0.0005424718, -0.021951139, 0.036526572, 1.4780488, -11, -0.005686856, 2.171517, 0.07594636, -29, -26, 0, -1, 0, 2.97601, 8, -0.0043397895, 0, 0.026038747, 0, -14, -0.0051897927, 1.7394357, 0.023868859, -8, -38, -0.001808246, -0.5050507, 0.004158964, 1.1616161, -4, -0.011391948, 1.3854163, 0.014646798, -1.7812505, -7, 0, 9, 0, -25.961512, -20, -0.003978133, 0.18333296, 0.010487835, -0.4833337, 9, -0.0010849535, -0.96154255, 0.003616492, 3.2051241, 5, 0, -74, 0, 2.8744266, 14, -0.0070521636, -1.0086206, 0.0034356713, 0.49137953, -31, -0.001808246, 2.19298, 0.0016274254, -1.9736868, -11, -0.035996895, -8.294622, 0.03905809, 9, 3, -0.002005736, 5.3150024, 0.00088745356, -2.351664, -57, -0.0028931897, 7.6666665, 0, 0, -30, -0.0025315385, -4.5, 0, 0, 6, -0.0023507278, 0.361112, 0.0019890666, -0.30555466, -34, 0, -5, 0, 21, -18, -0.0019890666, -5.2843, 0.0010849535, 2.882367, 15, -0.0030740201, -1.4166676, 0.0023507178, 1.0833324, -51, -0.0019890666, 4.7948666, 0.00036165118, -0.8718004, -19, 0, 6.8906236, 0, -11, -29, -0.0025315485, -3.3333402, 0.0025315385, 3.333327, 21, -0.014827619, -8.5, 0, 0, -19, -0.0016440948, 1.515368, 0.00016415119, -0.15129873, 11, -0.001808246, -0.13888876, 0.00036165118, 0.027777905, 22, -0.0021698973, -0.16666667, 0, 0, -9, -0.0058221496, -1.6098889, 0.021698952, 6, -36, -0.0030740201, 2.2430549, 0.0012657742, -0.92361176, -28, -0.0043397946, 3.166667, 0, 0, -4, -0.0025315385, 1.1199974, 0.0019890766, -0.8800027, -40, 0, 9, 0, -2.1900308, 15, -0.00596721, -7.1666675, 0, 0, -26, -0.004520615, 0.6720435, 0.0010849437, -0.16128984, 10, -0.005605559, 0.7331818, 0.013508251, -1.7668183, -7, -0.0010849437, 0.13386185, 0.012423307, -1.5328048, 42, -0.00018083057, -0.04444591, 0.0025315385, 0.62222075, -3, -0.002712369, -0.3333333, 0.002712369, 0.3333333, -3, 0, -35, 0, 6.4840016, 0, -0.017178338, 0.5, 0, 0),
"times": PackedFloat32Array(0, 0.024953792, 0.03797316, 0.045567792, 0.05424737, 0.07160653, 0.087880746, 0.105239905, 0.12476896, 0.13887328, 0.14646791, 0.14656791, 0.1551475, 0.21698949, 0.22783896, 0.2701519, 0.2744917, 0.29510573, 0.30595517, 0.310295, 0.32982403, 0.3385036, 0.3612875, 0.36464232, 0.3656273, 0.37864667, 0.38091654, 0.40794024, 0.41444993, 0.42204458, 0.4383188, 0.4480833, 0.4524231, 0.45567793, 0.49256614, 0.50341564, 0.5186049, 0.5511533, 0.5620028, 0.58695656, 0.58804154, 0.61191034, 0.61842006, 0.640119, 0.6542233, 0.6650728, 0.67483735, 0.68687177, 0.6921965, 0.7073857, 0.7214901, 0.7334245, 0.7453589, 0.7518686, 0.763803, 0.7659729, 0.7811622, 0.79635143, 0.806216, 0.8072009, 0.8093708, 0.8234751, 0.84191924, 0.8495139, 0.8647031, 0.8766376, 0.88531715, 0.91244084, 0.9189505, 0.92546016, 0.92654514, 0.9417344, 0.9580086, 1)
}

[sub_resource type="Animation" id="Animation_b1y8f"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_77kuu")]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rjk6v"]
_data = {
&"RESET": SubResource("Animation_hkx47"),
&"idle": SubResource("Animation_b1y8f"),
&"pre_dash": SubResource("Animation_hsmtr"),
&"shoot": SubResource("Animation_wuevu")
}

[node name="Boss" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_mu5rq")
bullet_scene = ExtResource("2_23pev")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("1_77kuu")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 194)
shape = SubResource("RectangleShape2D_mu5rq")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(-205, 160)

[node name="ActionTimer" type="Timer" parent="."]

[node name="TouchArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchArea"]
position = Vector2(0, 125.5)
shape = SubResource("RectangleShape2D_23pev")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_b1y8f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rjk6v")
}

[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]
